2004-02-02  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	DR206
	PR c++/13813
	* g++.dg/template/member4.C: New test.

2004-02-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13113
	* g++.old-deja/g++.mike/net36.C: Adjust error messages.

	PR c++/13854
	* g++.dg/ext/attrib13.C: New test.

	PR c++/13907
	* g++.dg/conversion/op2.C: New test.

2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/titype-1.c: Fix pasto.

2004-02-02  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/13957
	* g++.dg/template/non-type-template-argument-1.C, 
	g++.dg/template/qualified-id1.C: Update dg-error marks.
	* g++.dg/template/nontype6.C: New test.

2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/titype-1.c: New test.

2004-01-30  Michael Matz  <matz@suse.de>

	* g++.dg/ext/case-range1.C, g++.dg/ext/case-range2.C,
	g++.dg/ext/case-range3.C: New tests.

2004-01-31  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/12884
	* g77.f-torture/execute/12884.f: New test

2004-01-30  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/13683
	* g++.dg/template/sizeof6.C: New test.

2004-01-30  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/fwritable-strings-1.c: New test.

2004-01-30  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/compile/20040130-1.c: New test.

2004-01-29  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	* g++.dg/parse/error11.C: New test.
	* g++.dg/parse/error12.C: Likewise.

2004-01-29  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13883
	* g++.dg/template/ctor3.C: New test.

2004-01-28  Ziemowit Laski  <zlaski@apple.com>

	* objc.dg/proto-qual-1.m (ROUND, aligned_sizeof): New.
	(scan_initial, main): Use aligned_sizeof instead of sizeof.
	
2004-01-28  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13791
	* g++.dg/ext/attrib12.C: New test.

2004-01-28  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13736
	* g++.dg/parse/cast2.C: New test.

2004-01-27  James E Wilson  <wilson@specifixinc.com>
